<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>fxui</artifactId>
  <parent>
    <groupId>gr2213.notpaint</groupId>
    <artifactId>notpaint</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>

  <name>fxui</name>
  <!-- FIXME change it to the project's website -->
  <!-- <url>http://www.example.com</url> -->

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.7</maven.compiler.source>
    <maven.compiler.target>1.7</maven.compiler.target>
  </properties>

  <dependencies>

    <dependency>
      <groupId>gr2213.notpaint</groupId>
      <artifactId>core</artifactId>
      <version>1.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>


    <!-- Test with TextFX -->
    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-core</artifactId>
      <version>4.0.16-alpha</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit5</artifactId>
      <version>4.0.16-alpha</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <skipTests>${skipUiTests}</skipTests>
          <systemPropertyVariables>
            <headless>${headlessTests}</headless>
          </systemPropertyVariables>
          <argLine>
          ${argLine}
          --add-opens notpaint.ui/notpaint.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
          --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
          --add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
          </argLine>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>plantuml-generator-maven-plugin</artifactId>
        <groupId>de.elnarion.maven</groupId>
        <executions>
          <execution>
            <goals>
              <goal>generate</goal>
            </goals>
            <phase>generate-test-sources</phase>
          </execution>
        </executions>
        <configuration>
          <outputFilename>uiClassDiagram.uml</outputFilename>
          <scanPackages>
            <scanPackage>notpaint.ui</scanPackage>
          </scanPackages>
        </configuration>
      </plugin>
    </plugins>

  </build>
</project>